--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
   </head>
   <body>
     <h1>Hello, World!</h1>
+    <p>I'm Jackie.</p>
+    <h2>Selections from CWD Index</h2>
+    The first selection I made was the (hypertext).
   </body>
 </html>
