Added sites and descriptions

--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
   </head>
   <body>
     <h1>Hello, World!</h1>
-    <p>I'm Jackie.</p>
+    <p>My name is Jackie, but I also go by Moria online. My handle is usually @moriafriend on whatever social media I might be on. I love drawing, music, archeology, astronomy, coding, and crafting.</p>
     <h2>Selections from CWD Index</h2>
-    The first selection I made was the (hypertext).
+    <ul>
+      <li>
+        <a href="https://mrdoob.com/#/117/fire">Fire</a>
+        <p>My first choice is this animation work called <em>Fire</em>, which has a roaring fire at the bottom of the screen, and creates a trail of fire wherever you click. It's fun to do elegant patterns.</p>
+      </li>
+      <li>
+        <a href="https://www.geokitten.com/">Geo Kitten</a>
+        <p>My second choice is the online work called <em>Geo Kitten</em>, which </p>
+      </li>
+      <li>
+        <a href="https://native-land.ca/">Native Land</a>
+        <p>My final choice is the dynamic work called <em>Native Land</em>, which </p>
+      </li>
+    </ul>
   </body>
 </html>
