Finished descriptions and added colors

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Hello, World!</title>
   </head>
-  <body>
+  <body style="background: linear-gradient(180deg, pink, white,  pink); margin: 24px;">
     <h1>Hello, World!</h1>
     <p>My name is Jackie, but I also go by Moria online. My handle is usually @moriafriend on whatever social media I might be on. I love drawing, music, archeology, astronomy, coding, and crafting.</p>
     <h2>Selections from CWD Index</h2>
@@ -13,11 +13,11 @@
       </li>
       <li>
         <a href="https://www.geokitten.com/">Geo Kitten</a>
-        <p>My second choice is the online work called <em>Geo Kitten</em>, which </p>
+        <p>My second choice is the online work called <em>Geo Kitten</em>, which takes you through a series of kitten photos that "reveal your location". The actual way it knows your location is through IP address.</p>
       </li>
       <li>
         <a href="https://native-land.ca/">Native Land</a>
-        <p>My final choice is the dynamic work called <em>Native Land</em>, which </p>
+        <p>My final choice is the dynamic work called <em>Native Land</em>, which is an app that maps Indigenous territories, treaties, and languages. I find this very useful, and wish it was more widespread.</p>
       </li>
     </ul>
   </body>
