Personalized and formatted

--- a/index.html
+++ b/index.html
@@ -3,21 +3,33 @@
     <title>Hello, World!</title>
   </head>
   <body style="background: linear-gradient(180deg, pink, white,  pink); margin: 24px;">
-    <h1>Hello, World!</h1>
-    <p>My name is Jackie, but I also go by Moria online. My handle is usually @moriafriend on whatever social media I might be on. I love drawing, music, archeology, astronomy, coding, and crafting.</p>
+    <h1>Hello, World...</h1>
+    <p>...my name is Jacqueline Parnell! I have been a digital artist for about a decade.
+      <br> I love music, drawing, archeology, astronomy, coding, and crafting.
+      <br> From an early age, I hung around on the internet, practicing safety and staying in my lane. 
+      <br> I have always had an interest in scripting and coding. 
+      <br> The internet feels like home already, so learning how to build within it feels appropriate. </p>
+      <img src="https://static.vecteezy.com/system/resources/thumbnails/046/389/954/small/elephant-plush-toy-on-the-transparent-background-format-png.png" alt="Elephant plush" width="100" height="60">
+      <hr>
     <h2>Selections from CWD Index</h2>
     <ul>
       <li>
-        <a href="https://mrdoob.com/#/117/fire">Fire</a>
-        <p>My first choice is this animation work called <em>Fire</em>, which has a roaring fire at the bottom of the screen, and creates a trail of fire wherever you click. It's fun to do elegant patterns.</p>
+        <h3><a href="https://mrdoob.com/#/117/fire">Fire</a></h3>
+        <p>My first choice is this animation work called <em>Fire</em>, which has a roaring fire at the 
+          <br>bottom of the screen, and creates a trail of fire wherever you click.  
+          <br>It's fun to do elegant patterns.</p>
       </li>
       <li>
-        <a href="https://www.geokitten.com/">Geo Kitten</a>
-        <p>My second choice is the online work called <em>Geo Kitten</em>, which takes you through a series of kitten photos that "reveal your location". The actual way it knows your location is through IP address.</p>
+        <h3><a href="https://www.geokitten.com/">Geo Kitten</a></h3>
+        <p>My second choice is the online work called <em>Geo Kitten</em>, which takes you through 
+          <br>a series of kitten photos that "reveal your location". 
+          <br>The actual way it knows your location is through IP address.</p>
       </li>
       <li>
-        <a href="https://native-land.ca/">Native Land</a>
-        <p>My final choice is the dynamic work called <em>Native Land</em>, which is an app that maps Indigenous territories, treaties, and languages. I find this very useful, and wish it was more widespread.</p>
+        <h3><a href="https://native-land.ca/">Native Land</a></h3>
+        <p>My final choice is the dynamic work called <em>Native Land</em>, which is an app that 
+          <br>maps Indigenous territories, treaties, and languages. 
+          <br>I find this very useful, and wish it was more widespread.</p>
       </li>
     </ul>
   </body>
